<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:gravity="center">

        <Button
            android:id="@+id/btn_spotify_streamer"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/btn_spotify_streamer" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:gravity="center">

        <Button
            android:id="@+id/btn_scores_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_scores_app" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:gravity="center">

        <Button
            android:id="@+id/btn_library_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_scores_app"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_library_app" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:gravity="center">

        <Button
            android:id="@+id/btn_build_it_bigger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_library_app"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_build_it_bigger" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:gravity="center">

        <Button
            android:id="@+id/btn_xyz_reader"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_build_it_bigger"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_xyz_reader" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:gravity="center">

        <Button
            android:id="@+id/btn_capstone_my_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_xyz_reader"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_capstone_my_app" />

    </LinearLayout>

</LinearLayout>
